--- a/src/pages/activities/activities.scss
+++ b/src/pages/activities/activities.scss
@@ -1,14 +1,24 @@
 page-activities {
   background-color: #F8F8F8;
 
-  .scroll {
-    height: 100%;
-  }
+  // .scroll-content {
+  //   height: 50%;
+  // }
 
   #map {
       width: 100%;
       height: 50%;
       background-color: #ccc9c9;
+  }
+
+  ion-avatar {
+    img {
+      width: 50px;
+      height: 50px;
+    }
+  }
+
+  ion-badge {
   }
 
 }
